--- a/package.json
+++ b/package.json
@@ -1,21 +1,27 @@
 {
-  "name": "grocery-list-mongodb",
+  "name": "overview-component",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "dev": "webpack --config ./webpack.config.js --mode development -w",
     "start": "nodemon server/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --watch"
   },
   "keywords": [],
   "author": "Cheikhany Ejiwen",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.12.13",
+    "@babel/plugin-transform-runtime": "^7.14.5",
     "@babel/preset-env": "^7.12.13",
     "@babel/preset-react": "^7.12.13",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
+    "@testing-library/user-event": "github:testing-library/user-event",
+    "babel-jest": "^27.0.6",
     "babel-loader": "^8.2.2",
+    "jest": "^27.0.6",
     "nodemon": "^2.0.7",
     "webpack": "^5.41.1",
     "webpack-cli": "^4.5.0"
