--- a/package.json
+++ b/package.json
@@ -21,8 +21,19 @@
     "@testing-library/user-event": "github:testing-library/user-event",
     "babel-jest": "^27.0.6",
     "babel-loader": "^8.2.2",
+    "eslint": "^7.31.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jest": "^24.4.0",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^1.7.0",
+    "eslint-plugin-testing-library": "^4.10.1",
     "jest": "^27.0.6",
     "nodemon": "^2.0.7",
+    "prettier": "^2.3.2",
     "webpack": "^5.41.1",
     "webpack-cli": "^4.5.0"
   },
@@ -31,6 +42,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "react": "^16.14.0",
-    "react-dom": "^16.14.0"
+    "react-dom": "^16.14.0",
+    "styled-components": "^5.3.0"
   }
 }
