--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "jquery": "^3.6.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "styled-components": "^5.3.0"
