--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack --config ./webpack.config.js --mode development -w",
-    "start": "nodemon server/index.js",
+    "start": "live-server public/",
+    "start-serv": "nodemon server/index.js",
     "test": "jest --watch"
   },
   "keywords": [],
