--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "jquery": "^3.6.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
     "styled-components": "^5.3.0"
   }
