--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@babel/preset-react": "^7.12.13",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
-    "@testing-library/user-event": "github:testing-library/user-event",
+    "@testing-library/user-event": "^13.2.1",
     "babel-jest": "^27.0.6",
     "babel-loader": "^8.2.2",
     "eslint": "^7.31.0",
@@ -41,6 +41,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jquery": "^3.6.0",
     "react": "^16.14.0",
