--- a/package.json
+++ b/package.json
@@ -36,10 +36,15 @@
     "nodemon": "^2.0.7",
     "prettier": "^2.3.2",
     "webpack": "^5.41.1",
-    "webpack-cli": "^4.5.0"
+    "webpack-cli": "^4.5.0",
+    "csv-parse": "^4.16.0",
+    "csv-parser": "^3.0.0",
+    "csv-writer": "^1.6.0",
+    "newrelic": "^8.1.0",
+    "pg": "^8.7.1"
   },
   "dependencies": {
-    "axios": "^0.21.1",
+    "axios": "^0.21.4",
     "body-parser": "^1.19.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
